# ess-parser

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: bytes.rs  error.rs  ess.rs  lib.rs  option_helper.rs  result_helper.rs  scanner.rs  tests.rs
src/model/: mod.rs  record.rs  screenshot.rs  system_time.rs
tests/: Save325Kheros.ess
